# Mirage

./: .clang-format  .gitignore  CMakeLists.txt
include/Mirage/: Assert.hpp
include/Mirage/StaticRefl/: StaticRefl.hpp  StaticReflBegin.hpp  StaticReflEnd.hpp
include/Mirage/Util/: FunctionTraits.hpp  TypeList.hpp  VariableTraits.hpp
test/: CMakeLists.txt
test/StaticRefl/: CMakeLists.txt  StaticRefl.cpp
test/Utility/: CMakeLists.txt  FunctionTraits.cpp  TypeList.cpp  VariableTraits.cpp
